security/keycloak/k8s/base/keycloak/keycloak-ingress.yaml
---
# base/keycloak-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: keycloak-ingress
  labels:
    app: keycloak
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
spec:
  rules:
  - host: auth.flexwiz.io
    http:
      paths:
      - path: /auth
        pathType: Prefix
        backend:
          service:
            name: keycloak
            port:
              name: http
  tls:
  - hosts:
    - auth.flexwiz.io
    secretName: keycloak-tls
